@@ -16,6 +16,7 @@
 #
 
 import os
+import sys
 from setuptools import setup, find_packages
 
 # check python version is good
