@@ -1,5 +1,9 @@
 raspberrystem (0.0.1) UNRELEASED; urgency=medium
 
+  [ Jon Snyder ]
   * Initial release. (Closes: #XXXXXX)
 
- -- Jon Snyder <jon@minty>  Mon, 09 Jun 2014 14:21:25 -0400
+  [ Scott Silver Labs LLC ]
+  * This is a test of a new release
+
+ -- Scott Silver Labs LLC <bri@raspberrystem.com>  Tue, 10 Jun 2014 11:19:41 -0400
